# obsidian-web-mcp

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: tests.yml
docs/deploy/: headless-linux-proxmox.md  operations-runbook.md
scripts/systemd/: obsidian-mcp-semantic-reindex.service  obsidian-mcp-semantic-reindex.timer
src/obsidian_vault_mcp/: auth.py  config.py  frontmatter_index.py  frontmatter_io.py  hooks.py  models.py  oauth.py  rate_limit.py  semantic_benchmark.py  semantic_cli.py  server.py  vault.py
src/obsidian_vault_mcp/retrieval/: __init__.py  chunker.py  engine.py  models.py
src/obsidian_vault_mcp/tools/: analytics.py  manage.py  read.py  search.py  semantic_search.py  write.py
tests/: conftest.py  test_chunker.py  test_config.py  test_frontmatter.py  test_hooks.py  test_path_policy.py  test_retrieval_engine.py  test_security.py  test_semantic_cli.py  test_semantic_search.py  test_tools.py  test_vault.py
