[project]
name = "obsidian-web-mcp"
version = "0.5.1"
description = "Secure remote MCP server for Obsidian vaults -- access your notes from Claude, your phone, or any MCP client, anywhere"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.9.0,<1.27.0",
    "python-frontmatter>=1.1.0",
    "pypdf>=5.4.0",
    "pydantic>=2.0",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
semantic = [
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.0,<2.0.0",
    "rank-bm25>=0.2.2",
    "fastembed>=0.6.0",
]
semantic-fastembed = [
    "fastembed>=0.6.0",
]
semantic-sentence = [
    "sentence-transformers>=3.0.0",
]

[project.scripts]
vault-mcp = "obsidian_vault_mcp.server:main"
vault-semantic = "obsidian_vault_mcp.semantic_cli:main"
vault-semantic-benchmark = "obsidian_vault_mcp.semantic_benchmark:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/obsidian_vault_mcp"]
